--- a/template/index.html
+++ b/template/index.html
@@ -163,35 +163,25 @@
                       <!-- main-menu -->
                       <ul class="navbar-nav ml-xl-auto">
                         <li class="nav-item mega-menu mega-menu--wide">
-                          <a href="page-about.html" target="_self" class="nav-link" id="first-dropdown" aria-expanded="false">Sobre</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                          <a href="#" target="_self" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Tecnologias</a>
-                          <ul class="dropdown-menu" aria-labelledby="first-dropdown">
-                            <li>
-                              <ul class="menu">
-                                <li><a href="page-case-1.html">Visão computacional</a></li>
-                                <li><a href="page-case-2.html">Inteligência artificial</a></li>
-                                <li><a href="page-case-3.html">Câmeras hiperespectrais</a></li>
-                              </ul>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                          <a href="#" target="_self" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Cases</a>
-                          <ul class="dropdown-menu" aria-labelledby="first-dropdown">
-                            <li>
-                              <ul class="menu">
-                                <li><a href="page-case-1.html">Calibradora eletrônica de tomates miúdos</a></li>
-                                <li><a href="page-case-2.html">Sistema automático de qualificação de uvas</a></li>
-                                <li><a href="page-case-3.html">Seletora automática de mudas florestais</a></li>
-                                <li><a href="page-case-4.html">Seletora automática de mudas de flores</a></li>
-                              </ul>
-                            </li>
-                          </ul>
+                          <a class="section-btn nav-link" href="#about-section" target="_self" aria-expanded="false">Sobre</a>
                         </li>
                         <li class="nav-item">
-                          <a href="page-media.html" target="_self" class="nav-link" aria-haspopup="true" aria-expanded="false">Na mídia</a>
+                          <a class="section-btn nav-link" href="#technology-section" target="_self" aria-expanded="false">Tecnologias</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#case-section" target="_self" aria-expanded="false">Cases</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#benefit-section" target="_self" aria-expanded="false">Vantagens</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#client-section" target="_self" aria-expanded="false">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#media-section" target="_self" aria-haspopup="true" aria-expanded="false">Na mídia</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#contact-section" target="_self" aria-expanded="false">Contato</a>
                         </li>
                         <!-- futuro blog -->
                         <!--<li class="nav-item">
@@ -407,44 +397,15 @@
       <!-- banner end -->
 
       <div id="page-start"></div>
-      
-      <!-- section -->
-      <!-- ================ -->
-      <!--<section class="main-container">
+
+      <section id="about-section" class="main-container">
         <div class="container">
           <div class="row">
             
-            <div class="col-lg-6 order-lg-1 mb-40">
+            <div class="col-lg-6 order-lg-1">
+              <h3 class="page-title title-about">Sobre a MVisia</h3>
               <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
-              <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>.</p>
-              <p>Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
-              <p>Trazemos <strong>eficiência, redução de custos e aumento de qualidade</strong> para sistemas de produção da <strong>agroindústria</strong>, utilizando <strong>visão computacional e inteligência artificial.</strong></p>
-              <a class="btn radius-2 btn-transparent btn-hvr btn-animated btn-bordered-green" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
-            </div>
-
-            <div class="col-lg-6 order-lg-2">
-              <div class="bordered text-center">
-                <img src="images/about-bg-image.png" alt="mvisia-youtube-channel">
-
-                <div class="mb-20">
-                  <a class="cta-youtube btn btn-transparent btn-animated" href="https://www.youtube.com/user/MVisiaBrasil">Assista aos nossos vídeos!<i class="fa fa-angle-double-right"></i></a>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </section> -->
-      <!-- section end -->
-
-      <section class="main-container">
-        <div class="container">
-          <div class="row">
-            
-            <div class="col-lg-6 order-lg-1 mb-40">
-              <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
-              <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>.</p>
-              <p>Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
+              <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>. Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
               <p>Trazemos <strong>eficiência, redução de custos e aumento de qualidade</strong> para sistemas de produção da <strong>agroindústria</strong>, utilizando <strong>visão computacional e inteligência artificial.</strong></p>
               <a class="btn radius-2 btn-transparent btn-hvr btn-animated btn-bordered-green" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
@@ -513,7 +474,7 @@
         
       <!-- main start -->
       <!-- ================ -->
-      <div class="main col-md-12">
+      <div id="case-section" class="main col-md-12">
       
       <h2 class="page-title text-center">Cases de Sucesso</h2>
       <div class="separator"></div>
@@ -623,7 +584,7 @@
 
       <!-- section start -->
       <!-- ================ -->
-      <section id="benefits" class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image.png);">
+      <section id="benefit-section" class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image.png);">
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-md-8">
@@ -677,7 +638,7 @@
 
       <!-- section start -->
       <!-- ================ -->
-      <div class="section">
+      <div id="client-section" class="section">
         <div class="container pv-30">
           <h2 class="page-title text-center">Clientes</h2>
           <div class="separator"></div>
@@ -833,9 +794,9 @@
       <!-- section na mídia end -->
 
       <!-- section contact start -->
-      <div class="section">
+      <div>
         
-      <div class="container pv-30 mb-40">
+      <div id="contact-section" class="container pv-30 mb-60">
       <div class="row">
         
       <!-- main start -->
