--- a/template/index.html
+++ b/template/index.html
@@ -126,7 +126,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="#" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
