--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1353,7 +1353,7 @@ h5 + .separator {
 .default-translucent-bg .btn-gray-transparent:focus,
 .default-bg .btn-gray-transparent:focus {
   border-color: #ffffff;
-  color: #777777;
+  color: #606060;
   background-color: #ffffff;
 }
 
@@ -1501,7 +1501,7 @@ h5 + .separator {
   z-index: 3;
   right: 17px;
   position: absolute;
-  line-height: 32px;
+  line-height: 34px;
   top: 0;
   min-width: 12px;
 }
@@ -2115,9 +2115,9 @@ h5 + .separator {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -18px;
-  margin-left: -18px;
-  height: 36px;
+  margin-top: -25px;
+  margin-left: -25px;
+  height: 50px;
 }
 
 .icon-circle-small {
@@ -2219,7 +2219,7 @@ h5 + .separator {
 .feature-box p {
   clear: both;
   margin-bottom: 15px;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .feature-box:not(.shadow):hover .icon {
@@ -2251,7 +2251,7 @@ h5 + .separator {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   position: absolute;
-  top: -12px;
+  top: -20px;
   left: 25px;
 }
 
@@ -2292,10 +2292,26 @@ h5 + .separator {
   right: 60px;
 }
 
+.feature-box-2.ml-150 {
+  margin-left: 150px;
+}
+
+.feature-box-2.ml-150 {
+  margin-left: 150px;
+}
+
+.card-title.ml-25 {
+  margin-left: 25px;
+}
+
 /* Medium devices (desktops, tablets less than 991px) */
 @media (max-width: 991px) {
   .feature-box-2:not(.boxed) {
     padding-bottom: 0;
+  }
+
+  .feature-box-2.ml-150 {
+    margin-left: 0;
   }
 }
 
@@ -2338,6 +2354,7 @@ h5 + .separator {
   content: "";
   background-color: #ffffff;
   z-index: 2;
+  border-radius: 3px;
 }
 
 .light-gray-bg.shadow:before,
