--- a/template/index.html
+++ b/template/index.html
@@ -332,7 +332,7 @@
                 <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Análises em Tempo Real">
 
                 <!-- main image -->
-                <img src="images/bg-slider-2.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
+                <img src="images/bg-slider-4.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
 
                 <!-- Transparent Background -->
                 <div class="tp-caption dark-translucent-bg"
@@ -411,7 +411,7 @@
             </div>
 
             <div class="col-lg-6 order-lg-2">
-              <div class="bordered text-center">
+              <div class="bordered text-center special-container">
                 <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="image-alone" src="images/about-bg-image2.png" alt="mvisia-youtube-channel"></a>
               </div>
             </div>
@@ -422,18 +422,18 @@
       <!-- section end -->
 
       <!-- section start -->     
-      <section id="technology-section" class="dark-translucent-bg tech pv-55 clearfix" style="background-image:url(images/tech-bg-image-2.png)">
+      <section id="technology-section" class="dark-translucent-bg tech pv-55 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
         <div class="container">
           <div class="row row-eq-height">
             <div class="main col-md-12">
               <h2 class="page-title text-center">Tecnologias</h2>
               <div class="separator"></div>
-              <h3 class="page-subtitle text-center mb-40">Desenvolvemos softwares inteligentes para o reconhecimento de características<br> visuais por meio de algoritmos próprios e exclusivos.</h3>
+              <h3 class="page-subtitle text-center mb-60">Desenvolvemos softwares inteligentes para o reconhecimento de características<br> visuais por meio de algoritmos próprios e exclusivos.</h3>
 
               <div class="row">
                 <div class="col-md-4 ">
                   <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible mb-20" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-1.svg"></span>
+                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-1-1.svg"></span>
                     <h4 class="card-title mt-10">Visão Computacional</h4>
                     <div class="separator clearfix"></div>
                     <p>Utilizamos processamento de imagens<br> para automatizar inspeções visuais e<br> aumentar a sua acurácia.</p>
@@ -442,7 +442,7 @@
                 </div>
                 <div class="col-md-4 ">
                   <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible mb-20" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
-                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-2.svg"></span>
+                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-2-1.svg"></span>
                     <h4 class="card-title mt-10">Inteligência Artificial</h4>
                     <div class="separator clearfix"></div>
                     <p>O aprendizado de máquina e o uso<br> de redes neurais nos auxiliam no<br> reconhecimento de padrões.</p>
@@ -451,7 +451,7 @@
                 </div>
                 <div class="col-md-4 ">
                   <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible mb-20" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
-                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
+                    <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3-1.svg"></span>
                     <h4 class="card-title mt-10">Câmeras Hiperespectrais</h4>    
                     <div class="separator clearfix"></div>
                     <p>Utilizamos câmeras hiperespectrais para<br> analisar características que não podem<br> ser vistas com câmeras tradicionais.</p>
@@ -483,7 +483,7 @@
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
             <div class="overlay-container border-clear">
-              <img src="images/case-1.png" alt="">
+              <img class="img-container" src="images/case-1.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
               </div>
@@ -492,14 +492,14 @@
               <h3 class="card-title text-white">Tomate</h3>
               <div class="separator"></div>
               <p>Calibradora eletrônica de<br> tomates miúdos</p>
-              <a class="btn btn-transparent btn-animated text-white btn-bordered-white" href="page-case-1.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-1.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
             <div class="overlay-container border-clear">
-              <img src="images/case-2.png" alt="">
+              <img class="img-container" src="images/case-2.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
               </div>
@@ -508,14 +508,14 @@
               <h3 class="card-title text-white">Uva</h3>
               <div class="separator"></div>
               <p>Sistema automático de<br> qualificação de uvas</p>
-              <a class="btn btn-transparent btn-animated text-white btn-bordered-white" href="page-case-2.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-2.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
             <div class="overlay-container border-clear">
-                <img src="images/case-3.png" alt="">
+                <img class="img-container" src="images/case-3.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
               </div>
@@ -524,14 +524,14 @@
               <h3 class="card-title text-white">Eucalipto</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas florestais</p>
-              <a class="btn btn-transparent btn-animated text-white btn-bordered-white" href="page-case-3.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-3.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="400">
             <div class="overlay-container border-clear">
-                <img src="images/case-4.png" alt="">
+                <img class="img-container" src="images/case-4.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
               </div>
@@ -540,7 +540,7 @@
               <h3 class="card-title text-white">Flores</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas de flores</p>
-              <a class="btn btn-transparent btn-animated text-white btn-bordered-white" href="page-case-4.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-4.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -559,18 +559,14 @@
           <div class="row">
             <div class="col-md-12">
               <div class="call-to-action">
-                <div class="row">
-                  <div class="col-sm-12 text-center">
-                    <h4 class="text-white section-caller mt-10 mb-10">Realizamos projetos para o seu negócio. Entre em contato:</h4>
-                  </div>
-                </div>
 
                 <div class="row">
                   <div class="col-md-12 text-center">
-                    <ul class="list-inline">
-                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                    <ul class="list-inline banner">
+                      <li class="list-inline-item">Realizamos projetos sob medida para o seu negócio. Entre em contato:</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1 bigger"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1 bigger"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1 bigger"></i>(+55) (11) 98134-9727</li>
                     </ul>
                   </div>
                 </div>
@@ -584,7 +580,7 @@
 
       <!-- section start -->
       <!-- ================ -->
-      <section id="benefit-section" class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image.png);">
+      <section id="benefit-section" class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image4.png);">
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-md-8">
@@ -593,42 +589,58 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-4">
-              <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+            <div class="col-md-6">
+              <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
-                <h3 class="card-title">Redução de custos</h3>
+                <div class="body">
+                  <h3 class="card-title ml-25">Redução de custos</h3>
+                </div>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
+            <div class="col-md-6">
+              <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
-                <h3 class="card-title">Aumento de Produtividade</h3>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
-                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
-                <h3 class="card-title">Controle de qualidade</h3>
+                <div class="body">
+                  <h3 class="card-title ml-25">Aumento de produtividade</h3>
+                </div>
               </div>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-lg-4">
-              <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+            <div class="col-md-6">
+              <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
+                <div class="body">
+                  <h3 class="card-title ml-25">Controle de qualidade</h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
-                <h3>Relatórios detalhados</h3>
+                <div class="body">
+                  <h3 class="card-title ml-25">Relatórios detalhados</h3>
+                </div>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-5.svg"></span>
-                <h3 class="card-title">Operação intuitiva</h3>
+                <div class="body">
+                  <h3 class="card-title ml-25">Operação intuitiva</h3>
+                </div>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="pv-30 feature-box benefits text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
+            <div class="col-md-6">
+              <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
-                <h3 class="card-title">Assistência técnica</h3>
+                <div class="body">
+                  <h3 class="card-title ml-25 mb-60">Assistência técnica</h3>
+                </div>
               </div>
             </div>
           </div>
@@ -728,7 +740,7 @@
       <!-- section end -->
 
       <!-- section na mídia start -->     
-      <div id="media-section" class="dark-translucent-bg pv-45 clearfix" style="background-image:url(images/tech-bg-image-2.png)">
+      <div id="media-section" class="dark-translucent-bg pv-45 clearfix" style="background-image:url(images/tech-bg-image-4.png)">
         <div class="container owl-carousel content-slider-with-controls">
             <div class="main">
               <h2 class="page-title text-white text-center">Na Mídia</h2>
@@ -781,7 +793,7 @@
                   </div>
 
                   <div class="row">
-                    <a class="btn btn-transparent btn-animated text-white btn-bordered-white m-auto mt-20" href="page-case-2.html">Ver todas as notícias<i class="fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-transparent btn-animated btn-bordered-white m-auto mt-20" href="page-case-2.html">Ver todas<i class="fa fa-angle-double-right"></i></a>
                   </div>
 
                 </div>
@@ -807,10 +819,10 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <ul class="list-inline mb-40">
-              <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-              <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-              <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-              <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+              <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1 bigger"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+              <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1 bigger"></i>(+55) (11) 4302-5902</li>
+              <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1 bigger"></i>contato@mvisia.com.br</li>
+              <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1 bigger"></i>(+55) (11) 98134-9727</li>
             </ul>
           </div>
         </div>
