adjusts in progress 14.02 part II

--- a/template/index.html
+++ b/template/index.html
@@ -706,32 +706,32 @@
           <div class="row">
             <div class="col-md-12">
               <div class="call-to-action">
-                <div class="row">
-                  <div class="col-sm-12 text-center">
-                    <h4 class="mt-10 text-white section-caller mb-30">A MVisia é uma empresa 100% brasileira</h4>
+
+                <div class="row justify-content-md-center">
+                  <div class="col-md-8">
+                    <h4 class="page-title text-center section-caller text-white mt-4">A MVisia é uma empresa 100% brasileira</h4>
                   </div>
                 </div>
-                <div class="row">
-                  
-                  <div class="col-md-6">
-                    <div class="feature-box-2 object-non-visible mb-20" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                      <span class="icon default-bg small circle"><img class="icon-circle-small" src="images/icon-benefit-1.svg"></span>
-                      <div class="body">
-                        <p class="title">Soluções sem custos de importação</p>
+
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                        <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
+                        <div class="body">
+                          <h3 class="title ml-25">Soluções sem custos de importação</h3>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="feature-box-2 object-non-visible mb-20 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                        <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
+                        <div class="body">
+                          <h3 class="title ml-25">Garantia e assistência técnica capacitada</h3>
+                        </div>
                       </div>
                     </div>
                   </div>
 
-                  <div class="col-md-6">
-                    <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
-                      <span class="icon default-bg small circle"><img class="icon-circle-small" src="images/icon-benefit-6.svg"></span>
-                      <div class="body">
-                        <p class="title">Garantia e assistência técnica capacitada</p>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>   
               </div>
             </div>
           </div>
