--- a/template/index.html
+++ b/template/index.html
@@ -716,17 +716,17 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                        <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
+                        <span class="icon default-bg small circle icon-benefit"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                         <div class="body">
-                          <h3 class="title ml-25">Soluções sem custos de importação</h3>
+                          <h3 class="title ml-25">Sem custos de importação</h3>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="feature-box-2 object-non-visible mb-20 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                        <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
+                        <span class="icon default-bg small circle icon-benefit"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
                         <div class="body">
-                          <h3 class="title ml-25">Garantia e assistência técnica capacitada</h3>
+                          <h3 class="title ml-25">Assistência técnica capacitada</h3>
                         </div>
                       </div>
                     </div>
@@ -747,59 +747,94 @@
               <div class="separator"></div>
                 <div class="row">
 
-                <div class="owl-carousel content-slider-with-controls">
-                  
-                  <div class="overlay-visible">
+                  <div class="owl-carousel content-slider-with-controls">
                     
-                    <div class="row container">
-                      
-                      <div class="col-md-4">
-                        <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                          <img class="media-logo" src="images/media-1.svg">
-                        </div>
-                      </div>
-
-                      <div class="col-md-8 pv-30 phr-40">
-                        <h3 class="text-left text-white">Fernando Antonio Torres Velloso da Silva Neto - USP</h3>
-                        <p class="text-left">O Brasil é o maior produtor de eucalipto do mundo. Mesmo assim, esbarra em uma dificuldade: a seleção das mudas de eucalipto para plantio. Para melhorar a eficiência dessa etapa da produção, o aluno de Engenharia Mecatrônica da Universidade de São Paulo (USP), Fernando Antonio Torres Velloso da Silva Neto, junto aos colegas Fernando Lopes e Henrique Oliveira, criou uma máquina que automatiza o processo de determinação do índice de qualidade das mudas, a Seletora de mudas de eucalipto, projeto vencedor do Prêmio Santander Empreendedorismo 2015...</p>
-                      </div>
-
-                      </div>
-
-                    </div>
-
+                    <!-- News #1 -->
                     <div class="overlay-visible">
-                    
-                    <div class="row container">
-                      
-                      <div class="col-md-4">
-                        <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                          <img class="media-logo" src="images/media-1.svg">
+                      <div class="row container">
+                        <div class="col-md-4">
+                          <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                            <img class="media-logo" src="images/media-1.png">
+                          </div>
+                        </div>
+                        <div class="col-md-8 pv-30 phr-40">
+                          <h3 class="text-left text-white news-title">Limpeza eficiente, sem água</h3>
+                          <p class="text-left news-body">Uma máquina compacta, que não usa água, pode ajudar produtores de frutas e hortaliças a ter mais lucros na lavoura. O equipamento, que é móvel, foi criado por cientistas da Embrapa Instrumentação, de São Carlos (SP), e licenciado para a empresa MVisia. De acordo com Marcos David Ferreira, pesquisador que coordenou a criação do equipamento, ela irá ajudar os pequenos produtores. “As classificadoras compactas agregam valor ao produto, com classificação mais uniforme, redução de tempo para chegar ao consumidor e menor incidência de danos físicos, melhorias que podem... <a href="https://viewer.aemmobile.adobe.com/index.html#project/69eb211c-a1d3-4b60-a011-6bc2e481431f/view/edicao_380_junho_2017/article/globorural_-dj-de43b365-d42c-49f1-87e2-90d56ec4419d">Ler matéria completa</a></p>
                         </div>
                       </div>
+                    </div>
 
-                      <div class="col-md-8 pv-30 phr-40">
-                        <h3 class="text-left text-white">Fernando Antonio Torres Velloso da Silva Neto - USP</h3>
-                        <p class="text-left">O Brasil é o maior produtor de eucalipto do mundo. Mesmo assim, esbarra em uma dificuldade: a seleção das mudas de eucalipto para plantio. Para melhorar a eficiência dessa etapa da produção, o aluno de Engenharia Mecatrônica da Universidade de São Paulo (USP), Fernando Antonio Torres Velloso da Silva Neto, junto aos colegas Fernando Lopes e Henrique Oliveira, criou uma máquina que automatiza o processo de determinação do índice de qualidade das mudas, a Seletora de mudas de eucalipto, projeto vencedor do Prêmio Santander Empreendedorismo 2015...</p>
+                    <!-- News #2 -->
+                    <div class="overlay-visible">
+                      <div class="row container">
+                        <div class="col-md-4">
+                          <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                            <img class="media-logo" src="images/media-2.png">
+                          </div>
+                        </div>
+                        <div class="col-md-8 pv-30 phr-40">
+                          <h3 class="text-left text-white news-title">Campus Party: a nova juventude e o "fim" da maior festa nerd do Brasil</h3>
+                          <p class="text-left news-body">Há gente também que foi à Campus Party para fazer negócio. Com um corte de cabelo batido, óculos discretos e fala séria, o engenheiro recém-formado Fernando Lopes seria o típico nerd da minha geração. Na dele, Fernando faz parte da turma dos empreendedores, tão populares quanto vocalistas de bandas de colégio. Junto a dois amigos, Lopes transformou o seu trabalho de conclusão de curso num negócio. Desenvolveu uma máquina que usa softwares e sensores para selecionar mudas de eucaliptos no padrão ideal para o plantio. Esse processo hoje é feito manualmente... <a href="https://epoca.globo.com/vida/experiencias-digitais/noticia/2016/01/campus-party-nova-juventude-e-o-fim-da-maior-festa-nerd-do-brasil.html">Ler matéria completa</a></p>
+                        </div>
                       </div>
+                    </div>
 
+                    <!-- News #3 -->
+                    <div class="overlay-visible">
+                      <div class="row container">
+                        <div class="col-md-4">
+                          <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                            <img class="media-logo" src="images/media-5.png">
+                          </div>
+                        </div>
+                        <div class="col-md-8 pv-30 phr-40">
+                          <h3 class="text-left text-white news-title">Propostas são selecionadas em chamada para o setor agropecuário</h3>
+                          <p class="text-left news-body">A FAPESP anuncia o resultado da chamada de propostas lançada para o apoio ao desenvolvimento de aplicativos com a finalidade de inovar procedimentos e aumentar a produtividade e a eficiência no setor agropecuário. A seleção dá continuidade à colaboração entre a FAPESP e a Financiadora de Estudos e Projetos (Finep) e apoiará, por meio da concessão de recursos do PAPPE do MCTI/Finep/FNDCT e de recursos orçamentários da FAPESP, projetos de pesquisas de empresas paulistas. Os desafios e temas do edital foram propostos pela Secretaria de Agricultura e Abastecimento... <a href="http://www.fapesp.br/11441">Ler matéria completa</a></p>
+                        </div>
                       </div>
+                    </div>
+                    
+                    <!-- News #4 -->
+                    <div class="overlay-visible">
+                      <div class="row container">
+                        <div class="col-md-4">
+                          <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                            <img class="media-logo" src="images/media-5.png">
+                          </div>
+                        </div>
+                        <div class="col-md-8 pv-30 phr-40">
+                          <h3 class="text-left text-white news-title">MVisia adapta produto para conquistar diferentes mercados</h3>
+                          <p class="text-left news-body">Nem sempre a inovação idealizada pelo empreendedor é a que o mercado precisa. Ouvir o mercado para detectar suas necessidades ajuda a definir o foco do empreendimento e norteia a busca por soluções inovadoras. Foi assim com a MVisia, que concluiu o período de incubação no Centro de Inovação, Empreendedorismo e Tecnologia (Cietec), em São Paulo, em meados de 2016. Quando foi criada, em 2012, a ideia inicial de seus sócios-fundadores era oferecer automação sem fio para controle de ambiente em estufas agrícolas. Depois de algumas visitas em campo... <a href="http://pesquisaparainovacao.fapesp.br/mvisia_adapta_produto_para_conquistar_diferentes_mercados/49">Ler matéria completa</a></p>
+                        </div>
+                      </div>
+                    </div>
 
+                    <!-- News #5 -->
+                    <div class="overlay-visible">
+                      <div class="row container">
+                        <div class="col-md-4">
+                          <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                            <img class="media-logo" src="images/media-1.svg">
+                          </div>
+                        </div>
+                        <div class="col-md-8 pv-30 phr-40">
+                          <h3 class="text-left text-white news-title">Fernando Antonio Torres Velloso da Silva Neto - USP</h3>
+                          <p class="text-left news-body">O Brasil é o maior produtor de eucalipto do mundo. Mesmo assim, esbarra em uma dificuldade: a seleção das mudas de eucalipto para plantio. Para melhorar a eficiência dessa etapa da produção, o aluno de Engenharia Mecatrônica da Universidade de São Paulo (USP), Fernando Antonio Torres Velloso da Silva Neto, junto aos colegas Fernando Lopes e Henrique Oliveira, criou uma máquina que automatiza o processo de determinação do índice de qualidade das mudas, a Seletora de mudas de eucalipto, projeto vencedor do Prêmio Santander Empreendedorismo 2015... <a href="https://www.santanderuniversidades.com.br/embaixadores/paginas/fernando-antonio-torres-velloso-da-silva-neto.aspx">Ler matéria completa</a></p>
+                        </div>
+                      </div>
                     </div>
 
                   </div>
-
-
-                  </div>
-
-                  <div class="row">
-                    <a class="btn btn-transparent btn-animated btn-bordered-white m-auto mt-20" href="page-case-2.html">Ver todas<i class="fa fa-angle-double-right"></i></a>
-                  </div>
-
-                </div>
                 </div>
 
+                <div class="row mt-60 mb-20">
+                  <a class="btn btn-transparent btn-animated btn-bordered-white m-auto mt-20" href="page-media.html">Ver todas<i class="fa fa-angle-double-right"></i></a>
+                </div>
+
+              </div>
             </div>
+
+          </div>
 
         </div>
       </div>
