about page 16.03.2018 part I

--- a/template/index.html
+++ b/template/index.html
@@ -202,6 +202,7 @@
         <!-- header end -->
       </div>
       <!-- header-container end -->
+      <!-- end copy header -->
       
       <!-- banner start -->
       <!-- ================ -->
