--- a/template/page-media2.html
+++ b/template/page-media2.html
@@ -18,8 +18,8 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <!-- Web Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:700,500,400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,200,300,300italic,400,400italic,500,500italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:500,400,300,200,100' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 
@@ -63,7 +63,7 @@
 
     <!-- scrollToTop -->
     <!-- ================ -->
-    <div class="scrollToTop circle"><i class="icon-up-open-big"></i></div>
+    <div class="scrollToTop circle"><i class="fa fa-angle-up"></i></div>
 
     <!-- page wrapper start -->
     <!-- ================ -->
@@ -126,7 +126,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="#" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
@@ -163,35 +163,25 @@
                       <!-- main-menu -->
                       <ul class="navbar-nav ml-xl-auto">
                         <li class="nav-item mega-menu mega-menu--wide">
-                          <a href="page-about.html" target="_self" class="nav-link" id="first-dropdown" aria-expanded="false">Sobre</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                          <a href="#" target="_self" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Tecnologias</a>
-                          <ul class="dropdown-menu" aria-labelledby="first-dropdown">
-                            <li>
-                              <ul class="menu">
-                                <li><a href="page-case-1.html">Visão computacional</a></li>
-                                <li><a href="page-case-2.html">Inteligência artificial</a></li>
-                                <li><a href="page-case-3.html">Câmeras hiperespectrais</a></li>
-                              </ul>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                          <a href="#" target="_self" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Cases</a>
-                          <ul class="dropdown-menu" aria-labelledby="first-dropdown">
-                            <li>
-                              <ul class="menu">
-                                <li><a href="page-case-1.html">Calibradora eletrônica de tomates miúdos</a></li>
-                                <li><a href="page-case-2.html">Sistema automático de qualificação de uvas</a></li>
-                                <li><a href="page-case-3.html">Seletora automática de mudas florestais</a></li>
-                                <li><a href="page-case-4.html">Seletora automática de mudas de flores</a></li>
-                              </ul>
-                            </li>
-                          </ul>
+                          <a class="section-btn nav-link" href="#about-section" target="_self" aria-expanded="false">Sobre</a>
                         </li>
                         <li class="nav-item">
-                          <a href="page-media.html" target="_self" class="nav-link" aria-haspopup="true" aria-expanded="false">Na mídia</a>
+                          <a class="section-btn nav-link" href="#technology-section" target="_self" aria-expanded="false">Tecnologias</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#case-section" target="_self" aria-expanded="false">Cases</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#benefit-section" target="_self" aria-expanded="false">Vantagens</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#client-section" target="_self" aria-expanded="false">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#media-section" target="_self" aria-haspopup="true" aria-expanded="false">Na mídia</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="section-btn nav-link" href="#contact-section" target="_self" aria-expanded="false">Contato</a>
                         </li>
                         <!-- futuro blog -->
                         <!--<li class="nav-item">
@@ -212,6 +202,7 @@
         <!-- header end -->
       </div>
       <!-- header-container end -->
+      <!-- end copy header -->
 
       <!-- banner start -->
       <!-- ================ -->
@@ -441,25 +432,6 @@
                         <div class="overlay-bottom pv-55">
                           <div class="links">
                             <a class="btn btn-transparent btn-animated" href="http://startse.infomoney.com.br/portal/2016/01/12/16045/feira-de-investimentos-seleciona-projetos-de-tcc-para-transformar-em-um-negcio/">Veja<i class="fa fa-angle-double-right"></i></a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-3 col-md-6 isotope-item app-development">
-                    <div class="image-box shadow-2 text-center mb-20">
-                      <div class="overlay-container">
-                        <img src="images/portfolio-2.jpg" alt="">
-                        <div class="overlay-top">
-                          <div class="text">
-                            <h3><a href="portfolio-item.html">Project Title</a></h3>
-                            <p class="small">App Development</p>
-                          </div>
-                        </div>
-                        <div class="overlay-bottom">
-                          <div class="links">
-                            <a href="portfolio-item.html" class="btn btn-gray-transparent btn-animated btn-sm">View Details <i class="pl-10 fa fa-arrow-right"></i></a>
                           </div>
                         </div>
                       </div>
@@ -704,14 +676,6 @@
       <!-- main-container end -->
 
       <!-- footer start -->
-      <footer id="footer" class="clearfix ">
-
-      </footer>
-      <!-- footer end -->
-    </div>
-    <!-- page-wrapper end -->
-
-    <!-- footer start -->
       <footer id="footer" class="clearfix dark">
         <div class="footer">
           <div class="container">
@@ -723,9 +687,9 @@
                     <p>Máquinas de Visão e Inteligência Artificial</p>
                     <ul class="list-inline mb-20">
                       <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                      <li class="list-inline-item"><a href="tel:+00 1234567890" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</a></li>
-                      <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</a></li>
-                      <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
                     </ul>
                     <ul class="social-links circle animated-effect-1 margin-clear">
                       <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
@@ -742,15 +706,21 @@
         </div>
       </footer>
       <!-- footer end -->
+    </div>
+    <!-- page-wrapper end -->
 
-    <!-- JavaScript files placed at the end of the document so the pages load faster -->
-    <!-- ================================================== -->
-    <!-- Jquery and Bootstap core js files -->
+    <!-- jquery and bootstap core js files -->
     <script type="text/javascript" src="plugins/jquery.min.js"></script>
     <script type="text/javascript" src="plugins/popper.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <!-- Modernizr javascript -->
     <script type="text/javascript" src="plugins/modernizr.js"></script>
+    <!-- jQuery Revolution Slider  -->
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+    <!-- Isotope javascript -->
+    <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
     <!-- Magnific Popup javascript -->
     <script type="text/javascript" src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
     <!-- Appear javascript -->
@@ -762,6 +732,8 @@
     <script src="plugins/jquery.parallax-1.1.3.js"></script>
     <!-- Contact form -->
     <script src="plugins/jquery.validate.js"></script>
+    <!-- Morphext -->
+    <script type="text/javascript" src="plugins/morphext/morphext.min.js"></script>
     <!-- Owl carousel javascript -->
     <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
     <!-- Pace javascript -->
@@ -770,6 +742,9 @@
     <script type="text/javascript" src="js/template.js"></script>
     <!-- Custom Scripts -->
     <script type="text/javascript" src="js/custom.js"></script>
+    <!-- Google Maps javascript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+    <script type="text/javascript" src="js/google.map.config.js"></script>
 
   </body>
 </html>
