--- a/template/css/style.css
+++ b/template/css/style.css
@@ -163,7 +163,7 @@ ul {
 }
 
 .main-container {
-  padding: 90px 0;
+  padding: 80px 0;
 }
 
 .block {
@@ -934,6 +934,14 @@ h5 + .separator {
 .pv-70 {
   padding-top: 55px;
   padding-bottom: 55px;
+}
+
+.m-20 {
+  margin: 20px;
+}
+
+.mt-small {
+  margin-top: 5px;
 }
 
 .mt-10 {
@@ -2176,6 +2184,8 @@ h5 + .separator {
 
 .feature-box-2 .title {
   color: #ffffff;
+  margin-left: 60px;
+  margin-bottom: 25px;
 }
 
 .feature-box-2 p {
@@ -2256,7 +2266,7 @@ h5 + .separator {
 }
 
 .feature-box-2 .body {
-  margin-left: 80px;
+  margin-left: 50px;
 }
 
 .feature-box-2 .body p {
@@ -2461,7 +2471,9 @@ h5 + .separator {
 }
 
 .overlay-bottom,
-.overlay-top {
+.overlay-top, 
+.overlay,
+.overlay-bottom-2 {
   position: absolute;
   top: auto;
   padding: 15px;
@@ -2557,7 +2569,7 @@ h5 + .separator {
   background-color: #ffffff;
 }
 
-.overlay-container:hover .overlay-top,
+/* .overlay-container:hover .overlay-top,
 .overlay-container:hover .overlay-bottom,{
   height: 50%;
   opacity: 1;
@@ -2573,7 +2585,37 @@ h5 + .separator {
   filter: alpha(opacity=100);
   -webkit-backface-visibility: hidden;
   -webkit-transform: translateZ(0) scale(1, 1);
+} */
+
+.overlay-container:hover .overlay-top,
+.overlay-container:hover .overlay-bottom,
+.image-box.style-2:hover .overlay-top,
+.image-box.style-2:hover .overlay-bottom {
+  height: 50%;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1, 1);
 }
+
+.overlay-container:hover .overlay-to-top,
+.image-box:hover .overlay-to-top {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  bottom: 0;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1, 1);
+}
+
+.overlay-container:hover .overlay,
+.overlay-container:hover .overlay-bottom-2 {
+  height: 100%;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1, 1);
+}
+
 
 
 .overlay-container:hover .overlay-to-top,
