--- a/template/page-case-1.html
+++ b/template/page-case-1.html
@@ -246,7 +246,7 @@
             <!-- ================ -->
             <div class="main col-12 section">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 text-justify">
                   <p>Nossa calibradora eletrônica classifica os frutos em diversos tamanhos, além de remover os verdes e os com defeitos, trazendo mais qualidade e padronização para os seus produtos.</p>
                   <p>Obtenha ótimos resultados com qualquer variedade de tomates miúdos, como o grape, morgado, tomini, rosso, etc.</p>
                   <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>90.000 tomates por hora.</strong></p>
@@ -281,57 +281,138 @@
         </div>
 
         <!-- section start -->
-        <div class="light-gray-bg pv-70 section">
+        <!-- <div class="light-gray-bg pv-70 section">
           <div class="container">
-            <h3>Como funciona</h3>
-            <div class="separator-2"></div>        
+            <h3 class="title-subsection">Como funciona</h3>
+            <div class="separator-2"></div> 
+            
+            <div class="row">
+              <div class="col-md-12">
+                <img class="main-img-case m-auto" src="images/main-img-case-1.svg">
+              </div>
+            </div>
+            
             <div class="row d-flex row-eq-height">
 
               <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-1.svg"></span>
-                  <h4 class="card-title">Alimentação</h4>
+                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="card-title">01. Calibração</h4>
+                  <div class="separator clearfix"></div>
+                  <p> O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="card-title">02. Alimentação</h4>
                   <div class="separator clearfix"></div>
                   <p>Os tomates muito pequenos são removidos previamente por um sistema de rolos fixos ou no próprio polidor. A alimentação é feita dosando a quantidade de tomates em cada linha da máquina de forma ajustável.</p>
                 </div>
               </div>
 
               <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-2.svg"></span>
-                  <h4 class="card-title">Imagem</h4>
+                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="card-title">03. Imagem</h4>
                   <div class="separator clearfix"></div>
                   <p>Após a singularização dos tomates nos carrinhos, a calibradora faz uma série de 8 fotografias de cada fruto, em posições diferentes, garantindo uma inspeção 360º.</p>
                 </div>
               </div>
 
               <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
-                  <h4 class="card-title">Classificação/h4>
+                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="card-title">04. Classificação</h4>
                   <div class="separator clearfix"></div>
                   <p>Por meio de um algoritmo sofisticado, a calibradora avalia o tamanho de cada tomate, sua cor e eventuais defeitos na casca ou na forma. Uma vez definida a classe do tomate, ele é soprado no respectivo compartimento.</p>
                 </div>
               </div>
 
-              <div class="col-md-3">
-                <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
-                  <h4 class="card-title">Calibração</h4>
-                  <div class="separator clearfix"></div>
-                  <p> O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
+              </div>
+          </div>
+        </div>-->
+        <!-- section end -->
+
+        <!-- section start -->
+        <div class="light-gray-bg pv-70 section">
+          <div class="container">
+            <h3 class="title-subsection">Como funciona</h3>
+            <div class="separator-2"></div> 
+            
+            <div class="row mt-60">
+              <div class="col-lg-6 col-md-6 m-auto">
+                <img class="main-img-case" src="images/main-img-case-1.svg">
+              </div>
+            
+            <div class="col-lg-6 col-md-6">
+
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">01. Calibração</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text">O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">02. Alimentação</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text">Os tomates muito pequenos são removidos previamente por um sistema de rolos fixos ou no próprio polidor. A alimentação é feita dosando a quantidade de tomates em cada linha da máquina de forma ajustável.</p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">03. Imagem</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text">Após a singularização dos tomates nos carrinhos, a calibradora faz uma série de 8 fotografias de cada fruto, em posições diferentes, garantindo uma inspeção 360º.</p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">04. Classificação</h4>
+                  <div class="separator-2 clearfix"></div>
+                  <p class="how-works-text">Por meio de um algoritmo sofisticado, a calibradora avalia o tamanho de cada tomate, sua cor e eventuais defeitos na casca ou na forma. Uma vez definida a classe do tomate, ele é soprado no respectivo compartimento.</p>
                 </div>
               </div>
 
               </div>
           </div>
         </div>
+        </div>
         <!-- section end -->
+
+
+      <!-- section start -->
+      <!-- ================ -->
+      <section class="section dark-bg clearfix">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="call-to-action">
+
+                <div class="row">
+                  <div class="col-md-12 text-center">
+                    <ul class="list-inline banner">
+                      <li class="list-inline-item">Realizamos projetos sob medida para o seu negócio! Entre em contato:</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1 bigger"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1 bigger"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1 bigger"></i>(+55) (11) 98134-9727</li>
+                    </ul>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section end -->
 
         <!-- section start -->
         <div class="pv-70 section mt-20">
           <div class="container">
-            <h3>Veja em funcionamento</h3>
+            <h3 class="title-subsection">Veja em funcionamento</h3>
             <div class="separator-2"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
